--- a/src/app/landing-nav/landing-nav.component.html
+++ b/src/app/landing-nav/landing-nav.component.html
@@ -21,7 +21,7 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="/farmer_login">Farmer</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="/courier_login">Delivery</a></li>
+              <li><a class="dropdown-item" href="/courier_login">Courier</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -31,9 +31,9 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/customer_signup">Customer</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Farmer</a></li>
+              <li><a class="dropdown-item" href="/farmer_signup">Farmer</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Delivery</a></li>
+              <li><a class="dropdown-item" href="/courier_signup">Courier</a></li>
             </ul>
           </li>
          
