--- a/src/app/farmer-login/farmer-login.component.html
+++ b/src/app/farmer-login/farmer-login.component.html
@@ -48,7 +48,7 @@
               </div>
   
               <div>
-                <p class="mb-0">Don't have an account? <a href="/customer_signup" class="text-white-50 fw-bold">Sign Up</a>
+                <p class="mb-0">Don't have an account? <a href="/farmer_signup" class="text-white-50 fw-bold">Sign Up</a>
                 </p>
               </div>
   
