--- a/src/app/farmer/farmer-editproduct/farmer-editproduct.component.html
+++ b/src/app/farmer/farmer-editproduct/farmer-editproduct.component.html
@@ -2,7 +2,7 @@
 
     <button type="button" class="btn btn-secondary btn-lg">+add product</button>
 </div>
-<table class="table">
+<table class="table" style="margin: 20px;">
     <thead>
       <tr>
         <th scope="col">id</th>
