--- a/src/app/farmer/farmer-navbar/farmer-navbar.component.html
+++ b/src/app/farmer/farmer-navbar/farmer-navbar.component.html
@@ -1,6 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">My account</a>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/farmer">
+      <img src="AD.png" alt="" width="30" height="24" class="logo-image">
+      Far_name Account
+    </a>
+  
+  
+
+      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
