--- a/src/app/customer-signup/customer-signup.component.html
+++ b/src/app/customer-signup/customer-signup.component.html
@@ -71,9 +71,27 @@
 
                 <!--image file-->
                 <div class="form-outline mb-4 form-group">
-                  <input type="file" class="form-control form-control-lg" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-              <label class="form-label" for="form3Example1cg">Your First Name</label>
+                  <input type="file" accept="image/png, image/gif, image/jpeg" class="form-control form-control-lg" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" placeholder="Profile Photo" formControlName="Profile_Photoc" (change)="onChange($event)"
+                  [ngClass]="{ 'is-invalid': submitted && f['Profile_Photoc'].errors }">
+
+                  <div *ngIf="submitted && f['Profile_Photoc'].errors" class="invalid-feedback">
+                      <div *ngIf="f['Profile_Photoc'].errors['required']">Profile Photo is required</div>
+                      <div *ngIf="f['Profile_Photoc'].errors['max']">
+                        Only one photo needed
+                      </div>
+                      
+                      <div *ngIf="f['Profile_Photoc'].errors['maxlength']">
+                        File size is too large.
+                      </div>
+                    </div>
+              <label class="form-label" for="form3Example1cg">Your Profile Photo</label>
             </div>
+
+            <div class="form-group form-outline mb-4" >
+       
+      
+              <textarea   hidden type="text" class="form-control  form-control-lg" value={{image}}  id="form3Example786cg" formControlName="Profile_Photo"></textarea>
+          </div>
 
                 <div class="form-outline mb-4 form-group">
                   <input type="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="Password" formControlName="Password"
