--- a/src/app/farmer-signup/farmer-signup.component.html
+++ b/src/app/farmer-signup/farmer-signup.component.html
@@ -106,7 +106,28 @@
                 </div>
 
 
-                
+                <div class="form-outline mb-4 form-group">
+                  <input type="file" accept="image/png, image/gif, image/jpeg" class="form-control form-control-lg" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload" placeholder="Profile Photo" formControlName="Profile_Photoc" (change)="onChange($event)"
+                  [ngClass]="{ 'is-invalid': submitted && g['Profile_Photoc'].errors }">
+
+                  <div *ngIf="submitted && g['Profile_Photoc'].errors" class="invalid-feedback">
+                      <div *ngIf="g['Profile_Photoc'].errors['required']">Profile Photo is required</div>
+                      <div *ngIf="g['Profile_Photoc'].errors['max']">
+                        Only one photo needed
+                      </div>
+                      
+                      <div *ngIf="g['Profile_Photoc'].errors['maxlength']">
+                        File size is too large.
+                      </div>
+                    </div>
+              <label class="form-label" for="form3Example1cg">Your Profile Photo</label>
+            </div>
+
+            <div class="form-group form-outline mb-4" >
+       
+      
+              <textarea   hidden type="text" class="form-control  form-control-lg" value={{image}}  id="form3Example786cg" formControlName="Profile_Photo"></textarea>
+          </div>
 
                 <div class="form-outline mb-4 form-group">
                   <input type="password" id="form3Example4cg" class="form-control form-control-lg"placeholder="Password" formControlName="Password"
@@ -159,7 +180,7 @@
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                 </div>
 
-                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="/customer_login"
+                <p class="text-center text-muted mt-5 mb-0">Have already an account? <a href="/farmer_login"
                     class="text-white-50 fw-bold"><u>Login here</u></a></p>
 
               </form>
