farmer add product page

--- a/src/app/customer-signup/customer-signup.component.html
+++ b/src/app/customer-signup/customer-signup.component.html
@@ -72,7 +72,7 @@
                 <!--image file-->
                 <div class="form-outline mb-4 form-group">
                   <input type="file" class="form-control form-control-lg" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-              <label class="form-label" for="form3Example1cg">Your First Name</label>
+              <label class="form-label" for="form3Example1cg">Your Image</label>
             </div>
 
                 <div class="form-outline mb-4 form-group">
