--- a/src/app/admin/edit-cat/edit-cat.component.html
+++ b/src/app/admin/edit-cat/edit-cat.component.html
@@ -33,10 +33,12 @@
         <table class="table table-striped table-hover">
             <thead class="table-dark" style="text-align: center;">
         <tr>
-          <th scope="col">id</th>
-          <th scope="col">Category</th>
-          <th scope="col">Orders</th>
-          <th scope="col">shiping date</th>
+          <th scope="col">Id</th>
+          <th scope="col">Image</th>
+          <th scope="col">Vegetable Name</th>
+          <th scope="col">Max Retail Price LKR</th>
+          <th scope="col">Last Updated Admin</th>
+          <th scope="col">Last Updated Time</th>
           <th scope="col">Edit/Delete</th>
         </tr>
       </thead>
@@ -44,12 +46,15 @@
         <tr *ngFor="let dataItem of ProductList">
   
   
-          <td>{{dataItem.id}}</td>
-  
-  
-          <td>{{dataItem.category}}</td>
-          <td>{{dataItem.price}}</td>
-          <td>03-06-2022</td>
+          <td>{{dataItem.vegetablesId}}</td>
+          <td style="width: 50px;">
+            <img src={{dataItem.vegtable_image}} class="img-fluid img-thumbnail" >
+          </td>
+          <td>{{dataItem.name}}</td>
+          <td>{{dataItem.max_control_price_country}}</td>
+          <td>{{dataItem.adminId}}</td>
+          <td>{{dataItem.last_Updated_Time}}</td>
+          
   
           <td>
             <button class="btn"  id="edit" data-bs-toggle="modal" data-bs-target="#exampleModal">
