--- a/src/app/farmer/farmer-editproduct/farmer-editproduct.component.html
+++ b/src/app/farmer/farmer-editproduct/farmer-editproduct.component.html
@@ -34,31 +34,33 @@
       <table class="table table-striped table-hover">
           <thead class="table-dark" style="text-align: center;">
       <tr>
-        <th scope="col">id</th>
+        <th scope="col">Stock id</th>
         <th scope="col">Category</th>
-        <th scope="col">Orders</th>
-        <th scope="col">shiping date</th>
-        <th scope="col">Edit/Delete</th>
+        <th scope="col">Amount in kg</th>
+        <th scope="col">Farmer's Price per kg</th>
+        <th scope="col">Manufactured Date</th>
+        <th scope="col">Discription</th>
+        <th scope="col">Updated Time</th>
+        <th scope="col">Delete</th>
       </tr>
     </thead>
     <tbody class="align-middle" style="text-align: center;">
       <tr *ngFor="let dataItem of ProductList">
 
 
-        <td>{{dataItem.id}}</td>
+        <td>{{dataItem.vegetableStocksId}}</td>
 
 
-        <td>{{dataItem.category}}</td>
-        <td>{{dataItem.price}}</td>
-        <td>03-06-2022</td>
+        <td>{{dataItem.vegetablesId}}</td>
+        <td>{{dataItem.amount}}</td>
+        <td>{{dataItem.farmers_price_per_kg}}</td>
+        <td>{{dataItem.manu_date}}</td>
+        <td>{{dataItem.discription}}</td>
+        <td>{{dataItem.updated_Time}}</td>
+        
 
         <td>
-          <button class="btn"  id="edit" data-bs-toggle="modal" data-bs-target="#exampleModal">
-          
-          <svg (click)="clickItem(dataItem)"  xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="margin: 5px; " class="bi bi-pen-fill" viewBox="0 0 16 16">
-          <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001z"/>
-        </svg>
-      </button >
+         
       <button class="btn" id="del" >
         <svg (click)="delete(dataItem)" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" style="margin: 5px;" class="bi bi-trash-fill" viewBox="0 0 16 16">
           <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
